--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,9 @@
     "highlight.js": "^9.13.1",
     "koa": "^2.5.2",
     "nuxt": "^2.0.0",
-    "vuetify": "^1.2.4"
+    "vuetify": "^1.2.4",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
@@ -30,9 +32,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "nodemon": "^1.11.0",
-    "prettier": "1.14.3",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "vue-lazyload": "^1.2.6"
+    "prettier": "1.14.3"
+
   }
 }
