--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "cos-js-sdk-v5": "^0.5.5",
     "cross-env": "^5.2.0",
     "koa": "^2.5.2",
     "mavon-editor": "^2.6.17",
