--- a/app/package.json
+++ b/app/package.json
@@ -19,9 +19,10 @@
     "highlight.js": "^9.13.1",
     "koa": "^2.5.2",
     "nuxt": "^2.0.0",
-    "vuetify": "^1.2.4",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "vue-lazyload": "^1.2.6",
+    "vuetify": "^1.2.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
@@ -34,6 +35,5 @@
     "less-loader": "^4.1.0",
     "nodemon": "^1.11.0",
     "prettier": "1.14.3"
-
   }
 }
