--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
+    "dotenv": "^6.2.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
@@ -27,7 +28,8 @@
     "koa-session": "^5.10.1",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.5",
-    "mongoose": "^5.4.0"
+    "mongoose": "^5.4.0",
+    "qcloud-cos-sts": "^2.0.6"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
