--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^5.2.0",
     "highlight.js": "^9.13.1",
     "koa": "^2.5.2",
+    "medium-zoom": "^1.0.2",
     "nuxt": "^2.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -33,6 +34,7 @@
     "eslint-plugin-vue": "^4.0.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "material-design-icons-iconfont": "^4.0.3",
     "nodemon": "^1.11.0",
     "prettier": "1.14.3"
   }
