--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "chalk": "^2.4.1",
     "dotenv": "^6.2.0",
+    "jsonwebtoken": "^8.4.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
@@ -24,17 +26,23 @@
     "koa-logger": "^3.2.0",
     "koa-multer": "^1.0.2",
     "koa-onerror": "^4.1.0",
+    "koa-passport": "^4.1.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.10.1",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.5",
     "mongoose": "^5.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-auth": "^1.0.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "qcloud-cos-sts": "^2.0.6"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "cross-env": "^5.2.0",
+    "eslint": "^5.11.1",
     "nodemon": "^1.18.9"
   }
 }
