--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,7 @@
     "less-loader": "^4.1.0",
     "material-design-icons-iconfont": "^4.0.3",
     "nodemon": "^1.11.0",
-    "prettier": "1.14.3"
+    "prettier": "1.14.3",
+    "vue-svg-loader": "^0.11.0"
   }
 }
